--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	  <meta name="description" content="">	
 	  <meta name="viewport" content="width=device-width">
-	  <link rel="stylesheet" media="screen, projection" href="assets/css/screen.css">
+	  <link rel="stylesheet" media="screen, projection" href="css/screen.css">
+	  <script type="text/javascript" src="js/lib/require.js" data-main="js/app/main"></script>
 	</head>
 	<body>
 	  <!--[if lt IE 8]><p class=chromeframe>Your browser is <em>ancient!</em>
