added fav.ico to prevent browser from getting 404 on request

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	  <meta name="description" content="">	
 	  <meta name="viewport" content="width=device-width">
+	  <link rel="shortcut icon" href="img/favicon.ico">
 	  <link rel="stylesheet" media="screen, projection" href="css/screen-optimized.css">
 	  <script type="text/javascript" src="js/lib/require.js" data-main="js/app/main"></script>
 	</head>
