--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,27 @@
 <!doctype html>
 <html>
-	<head>
-	  <title></title>
-	  <meta charset="utf-8">
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	  <meta name="description" content="">	
-	  <meta name="viewport" content="width=device-width">
-	  <link rel="shortcut icon" href="img/favicon.ico">
-	  <link rel="stylesheet" media="screen, projection" href="css/screen-optimized.css">
-	  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/require.js/1.0.8/require.min.js" data-main="js/app/main">
-	  </script>
-	</head>
-	<body>
-	  <!--[if lt IE 8]><p class=chromeframe>Your browser is <em>ancient!</em>
-	  <a href="http://browsehappy.com/">Upgrade to a different browser</a>.<![endif]-->
-	  <header>
-	
-	  </header>
-	  <div role="main">
-		<h1>Hello World</h1>
-	  </div>
-	  <footer>
-	
-	  </footer>
-	
-	</body>
+<head>
+    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="stylesheet" media="screen, projection" href="css/screen-optimized.css">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/require.js/1.0.8/require.min.js" data-main="js/app/main"></script>
+</head>
+<body>
+<!--[if lt IE 8]><p class=chromeframe>Your browser is <em>ancient!</em>
+    <a href="http://browsehappy.com/">Upgrade to a different browser</a>.<![endif]-->
+<header>
+
+</header>
+<div role="main" class=".app">
+
+</div>
+<footer>
+
+</footer>
+
+</body>
 </html>
