got rid of unncessary app folder in public/js

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" media="screen, projection" href="css/screen-optimized.css">
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/require.js/1.0.8/require.min.js" data-main="js/app/main"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/require.js/1.0.8/require.min.js" data-main="js/main"></script>
 </head>
 <body>
 <!--[if lt IE 8]><p class=chromeframe>Your browser is <em>ancient!</em>
