added little node script to watch for js changes and compile

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="stylesheet" media="screen, projection" href="css/screen-optimized.css">
+    <link rel="stylesheet" media="screen, projection" href="css/screen.css">
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/require.js/1.0.8/require.min.js" data-main="js/main"></script>
 </head>
 <body>
