volo standard template

--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html class="no-js">
     <head>
         <meta charset="utf-8">
@@ -6,6 +5,7 @@
         <title>KickPlate</title>
         <meta name="description" content="KickPlate - JsApps BoilerPlate Code">
         <meta name="viewport" content="width=device-width">
+        <script data-main="js/app" src="js/lib/require.js"></script>
     <body>
     	<h1>KickPlate</h1>
     </body>
