--- a/www/index.html
+++ b/www/index.html
@@ -6,8 +6,9 @@
         <meta name="description" content="KickPlate - JsApps BoilerPlate Code">
         <meta name="viewport" content="width=device-width">
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
-        <script data-main="js/app" src="js/lib/require.js"></script>
+    </head>
     <body>
     	<h1>KickPlate</h1>
+    	<script data-main="js/app" src="js/lib/require.js"></script>
     </body>
 </html>
