added marionette layout and view

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
     </head>
     <body>
+        <div id="main"></div>
     	<script data-main="js/app" src="js/lib/require.js"></script>
     </body>
 </html>
