--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
         <title>KickPlate</title>
         <meta name="description" content="KickPlate - JsApps BoilerPlate Code">
         <meta name="viewport" content="width=device-width">
+        <link rel="author" href="humans.txt" />
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
     </head>
     <body>
