--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <div id="main"></div>
-    	<script data-main="js/app" src="js/lib/require.js"></script>
+    	<script data-main="js/app.main" src="js/lib/require.js"></script>
     </body>
 </html>
