Add flex layout sample.

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width">
         <link rel="author" href="humans.txt" />
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
+        <link href="css/screen.css" rel="stylesheet">
     </head>
     <body>
-        <div id="main"></div>
     	<script data-main="js/app.main" src="js/lib/require.js"></script>
     </body>
 </html>
